# parameter-store

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Dockerfile-loader  GEMINI.md  README.md  build.sh  cloudbuild.yaml  compose.yaml  env.template  load_db.py  manage.py  pyproject.toml  removed-requirements.txt  requirements-dev.in  requirements-dev.txt  requirements-setuptools.txt  requirements.in  requirements.txt  ruff.toml
.github/workflows/: lint.yaml  release-please.yaml  run-tests.yaml  test-app.yaml  test-docker-build.yaml
api/: api_changesets.py  api_clusters.py  api_groups.py  api_v1.py  apps.py  exc.py  middleware.py  models.py  permissions.py  test_schema.py  urls.py  utils.py
api/migrations/: 0001_initial.py
api/schema/: filters.py  out.py  request.py  response.py
api/tests/: test_changeset_commit_errors.py  test_changeset_commit_happy_path.py  test_changesets.py  test_clusters.py  test_customdatafields.py  test_datafields.py  test_groups.py  test_history.py  test_tags.py
auto_api/: apps.py  models.py  serializers.py  sot_csv_integration.py  urls.py  util.py  views.py
auto_api/migrations/: 0001_initial.py
deployment/: backend.tf  main.tf  provider.tf  terraform.tfvars  variables.tf
deployment/env/: staging.gcs.tfbackend  testing.gcs.tfbackend
docs/: changesets_solutions_requirements_doc.md  erd.md  iap-programmatic-access.md  infrastructure.md  programmatic-access.md  user-guide.md  user-journeys.md  users-and-permissions.md  verification-walkthrough.md
examples/: generate_eps_data.py  generate_eps_sample_data.py
examples/data_loader/: cloudbuild-data-loader.yaml  load_db.py
examples/eps_to_csv/: README.md  config.ini  eps_to_csv_converter.py  requirements.in
examples/eps_to_csv/config/: sot_csv_config.ini
examples/eps_to_csv/resources/: README.md  csv_merger.md  csv_merger.py  eps_to_csv_converter.py  requirements.in  requirements.txt
examples/eps_to_csv/workflows/: README.md  call_hydration_pipeline_full.yaml  csv_updater_reusable_pipeline.yaml  eps_commands_pipeline.yaml  manual_update_sot.yaml  reusable_workflow.md  update_template_sot_via_merge.yaml
examples/terraform/: README.md  certs-and-dns.tf  cloudbuild.tf  iam-and-services.tf  main.tf  meta.tf  network.tf  opt-gcb-data-loader.tf  optional-cloudbuild-data-loader.tf  optional-network.tf  outputs.tf  providers.tf  run.tf  secrets.tf  sql.tf  terraform.tfvars  variables.tf
examples/terraform/bootstrap/: main.tf  providers.tf  terraform.tfvars
helpers/: create-service-accounts.sh  uv-package-upgrade.sh
iap_jwt/: middleware.py
parameter_store/: admin.py  admin_default.py  admin_inlines.py  admin_mixins.py  admin_user_and_group.py  apps.py  asgi.py  constraints.py  context_processors.py  customerconfig.py  iap_jwt.py  local_settings.py.example  middleware.py  models.py  settings.py  signals.py  sot_csv_integration.py  urls.py  util.py  utils.py  validation.py  wsgi.py
parameter_store/migrations/: 0001_initial.py  0002_cluster_data_cluster_tags_and_more.py  0003_remove_clusterrole_cluster_delete_globalrole_and_more.py  0004_alter_clusterintent_options_and_more.py  0005_alter_cluster_group_alter_cluster_name_and_more.py  0006_alter_clusterfleetlabel_options_and_more.py  0007_alter_clusterfleetlabel_key.py  0008_alter_clusterfleetlabel_key_and_more.py  0009_rename_git_token_secrets_manager_name_clusterintent_git_token_secret_manager_name_and_more.py
parameter_store/static/css/: custom_admin.css  styles.css
parameter_store/static/parameter_store/css/: custom_admin.css
parameter_store/tests/: test_admin_inlines.py  test_admin_interception.py  test_admin_mixins.py  test_changeset_actions.py  test_changeset_lifecycle_e2e.py  test_commit_error_enrichment.py  test_constraints_and_util.py  test_custom_data_changeset_e2e.py  test_deletion_lifecycle.py  test_deletion_logic.py  test_util.py
templates/unfold/helpers/: changeset_dropdown.html  changeset_selector.html  userlinks.html
terraform/: README.md  cb.tf  iam-and-services.tf  main.tf  meta.tf  network.tf  opt-gcb-data-loader.tf  outputs.tf  secrets.tf  sql.tf  terraform.tfvars  variables.tf
utils/: eps_to_csv_converter.py  requirements.txt
