[project]
name = "parameter-store"
version = "0.1.0"
description = "Edge Parameter Store is a Django application that holds parameter data for deployments of Google Distributed Cloud Connected clusters"
authors = [
  {name = "Paul Durivage", email = "durivage@google.com"},
  {name = "Daniel Xia", email = "danielxia@google.com"},
  {name = "Kodanda Rama", email = "kodrama@google.com"},
  {name = "Abhishek Patil", email = "psabhishek@google.com"},
]
license = "LicenseRef-My-Custom-License"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "annotated-types>=0.7.0",
    "asgiref>=3.9.1",
    "cachetools>=5.5.2",
    "certifi>=2025.7.14",
    "cffi>=1.17.1",
    "charset-normalizer>=3.4.2",
    "click>=8.2.1",
    "cryptography>=45.0.5",
    "django>=5.2.4",
    "django-guardian>=3.0.3",
    "django-ninja>=1.4.3",
    "django-unfold>=0.62.0",
    "google-auth>=2.40.3",
    "gunicorn>=23.0.0",
    "h11>=0.16.0",
    "idna>=3.10",
    "jinja2>=3.1.6",
    "markupsafe>=3.0.2",
    "packaging>=25.0",
    "psycopg>=3.2.9",
    "psycopg-binary>=3.2.9",
    "pyasn1>=0.6.1",
    "pyasn1-modules>=0.4.2",
    "pycparser>=2.22",
    "pydantic>=2.11.7",
    "pydantic-core>=2.33.2",
    "requests>=2.32.4",
    "rsa>=4.9.1",
    "servestatic>=3.1.0",
    "sqlparse>=0.5.3",
    "typing-extensions>=4.14.1",
    "typing-inspection>=0.4.1",
    "urllib3>=2.5.0",
    "uvicorn>=0.35.0",
    "uvicorn-worker>=0.3.0",
]

[dependency-groups]
dev = [
    "asgiref>=3.9.1",
    "astroid>=3.3.11",
    "build>=1.2.2.post1",
    "click>=8.2.1",
    "dill>=0.4.0",
    "django>=5.2.4",
    "django-debug-toolbar>=5.2.0",
    "isort>=6.0.1",
    "mccabe>=0.7.0",
    "mypy>=1.17.0",
    "mypy-extensions>=1.1.0",
    "packaging>=25.0",
    "pip>=25.1.1",
    "pip-tools>=7.4.1",
    "platformdirs>=4.3.8",
    "pre-commit>=4.2.0",
    "pylint>=3.3.7",
    "pyproject-hooks>=1.2.0",
    "ruff>=0.12.4",
    "setuptools>=80.9.0",
    "sqlparse>=0.5.3",
    "tomlkit>=0.13.3",
    "typing-extensions>=4.14.1",
    "wheel>=0.45.1",
]
