[project]
name = "parameter-store"
version = "1.2.1"
description = "Parameter Store is a Django application that holds parameter data for deployments of Google Distributed Cloud Connected clusters"
authors = [
    { name = "Paul Durivage", email = "durivage@google.com" },
    { name = "Daniel Xia", email = "danielxia@google.com" },
    { name = "Kodanda Rama", email = "kodrama@google.com" },
    { name = "Abhishek Patil", email = "psabhishek@google.com" },
    { name = "Ben Chapman", email="benchapman@google.com" }
]
license = "LicenseRef-My-Custom-License"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.4",
    "django-guardian>=3.0.3",
    "django-ninja>=1.4.3",
    "django-unfold>=0.62.0",
    "google-auth>=2.40.3",
    "jinja2>=3.1.6",
    "psycopg>=3.2.9",
    "psycopg-binary>=3.2.9",
    "pydantic>=2.11.7",
    "requests>=2.32.5",
    "servestatic>=3.1.0",
    "uvicorn>=0.35.0",
    "uvicorn-worker>=0.3.0",
]

[dependency-groups]
dev = [
    "django-debug-toolbar>=5.2.0",
    "pre-commit>=4.2.0",
    "ruff>=0.12.4",
    "typing-extensions>=4.14.1",
]
